; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_audio_devices.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_audio_devices.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }
%struct.MPContext = type { %struct.command_ctx* }
%struct.command_ctx = type { i32 }
%struct.ao_device_list = type { i32 }

@get_device_entry = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_audio_devices to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_audio_devices(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.m_property*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.MPContext*, align 8
  %10 = alloca %struct.command_ctx*, align 8
  %11 = alloca %struct.ao_device_list*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.m_property* %1, %struct.m_property** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to %struct.MPContext*
  store %struct.MPContext* %13, %struct.MPContext** %9, align 8
  %14 = load %struct.MPContext*, %struct.MPContext** %9, align 8
  %15 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %14, i32 0, i32 0
  %16 = load %struct.command_ctx*, %struct.command_ctx** %15, align 8
  store %struct.command_ctx* %16, %struct.command_ctx** %10, align 8
  %17 = load %struct.MPContext*, %struct.MPContext** %9, align 8
  %18 = call i32 @create_hotplug(%struct.MPContext* %17)
  %19 = load %struct.command_ctx*, %struct.command_ctx** %10, align 8
  %20 = getelementptr inbounds %struct.command_ctx, %struct.command_ctx* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call %struct.ao_device_list* @ao_hotplug_get_device_list(i32 %21)
  store %struct.ao_device_list* %22, %struct.ao_device_list** %11, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i8*, i8** %8, align 8
  %25 = load %struct.ao_device_list*, %struct.ao_device_list** %11, align 8
  %26 = getelementptr inbounds %struct.ao_device_list, %struct.ao_device_list* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @get_device_entry, align 4
  %29 = load %struct.ao_device_list*, %struct.ao_device_list** %11, align 8
  %30 = call i32 @m_property_read_list(i32 %23, i8* %24, i32 %27, i32 %28, %struct.ao_device_list* %29)
  ret i32 %30
}

declare dso_local i32 @create_hotplug(%struct.MPContext*) #1

declare dso_local %struct.ao_device_list* @ao_hotplug_get_device_list(i32) #1

declare dso_local i32 @m_property_read_list(i32, i8*, i32, i32, %struct.ao_device_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
